--- a/formmark.ui
+++ b/formmark.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1114</width>
-    <height>845</height>
+    <width>1112</width>
+    <height>843</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -511,18 +511,15 @@
                 </property>
                </widget>
               </item>
-              <item row="2" column="0">
-               <spacer name="verticalSpacer">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
+              <item row="2" column="0" colspan="2">
+               <widget class="DbViewer" name="tableViewInt">
+                <property name="minimumSize">
                  <size>
-                  <width>20</width>
-                  <height>40</height>
+                  <width>220</width>
+                  <height>0</height>
                  </size>
                 </property>
-               </spacer>
+               </widget>
               </item>
              </layout>
             </item>
