--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,14 +39,15 @@
      <x>0</x>
      <y>0</y>
      <width>1014</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
      <string>Производство</string>
     </property>
-    <addaction name="actionPart"/>
+    <addaction name="actionPartEl"/>
+    <addaction name="actionPartWire"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -73,12 +74,12 @@
    <addaction name="menu_3"/>
    <addaction name="menu_4"/>
   </widget>
-  <action name="actionPart">
+  <action name="actionPartEl">
    <property name="checked">
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Партии</string>
+    <string>Партии электродов</string>
    </property>
    <property name="shortcut">
     <string>F1</string>
@@ -105,7 +106,7 @@
     <string>Свидетельства и документы</string>
    </property>
    <property name="shortcut">
-    <string>F2</string>
+    <string>F3</string>
    </property>
   </action>
   <action name="actionMark">
@@ -119,6 +120,14 @@
   <action name="actionPos">
    <property name="text">
     <string>Положения при сварке</string>
+   </property>
+  </action>
+  <action name="actionPartWire">
+   <property name="text">
+    <string>Партии проволоки</string>
+   </property>
+   <property name="shortcut">
+    <string>F2</string>
    </property>
   </action>
  </widget>
