--- a/dialogsignature.ui
+++ b/dialogsignature.ui
@@ -55,7 +55,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Должность</string>
+        <string>ИНН</string>
        </property>
       </widget>
      </item>
