--- a/formship.ui
+++ b/formship.ui
@@ -174,6 +174,13 @@
                </widget>
               </item>
               <item>
+               <widget class="QPushButton" name="pushButtonPdf">
+                <property name="text">
+                 <string>PDF</string>
+                </property>
+               </widget>
+              </item>
+              <item>
                <spacer name="horizontalSpacer">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
