--- a/editor.ui
+++ b/editor.ui
@@ -155,6 +155,13 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButtonLoad">
+       <property name="text">
+        <string>Загрузить и подписать</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QToolButton" name="toolButtonHTMLLoad">
        <property name="text">
         <string>-&gt;</string>
