--- a/editor.ui
+++ b/editor.ui
@@ -3,7 +3,7 @@
  <class>Editor</class>
  <widget class="QWidget" name="Editor">
   <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
+   <enum>Qt::WindowModality::ApplicationModal</enum>
   </property>
   <property name="geometry">
    <rect>
@@ -36,6 +36,12 @@
          <height>16777215</height>
         </size>
        </property>
+       <property name="lineWrapMode">
+        <enum>QTextEdit::LineWrapMode::FixedPixelWidth</enum>
+       </property>
+       <property name="lineWrapColumnOrWidth">
+        <number>700</number>
+       </property>
       </widget>
      </item>
      <item>
@@ -48,8 +54,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>160</width>
-          <height>785</height>
+          <width>150</width>
+          <height>760</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
@@ -72,7 +78,7 @@
          <item>
           <spacer name="verticalSpacer">
            <property name="orientation">
-            <enum>Qt::Vertical</enum>
+            <enum>Qt::Orientation::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
@@ -144,7 +150,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
