--- a/editor.ui
+++ b/editor.ui
@@ -40,12 +40,18 @@
         <enum>QTextEdit::LineWrapMode::FixedPixelWidth</enum>
        </property>
        <property name="lineWrapColumnOrWidth">
-        <number>830</number>
+        <number>810</number>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QScrollArea" name="scrollArea">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="widgetResizable">
         <bool>true</bool>
        </property>
@@ -54,7 +60,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>150</width>
+          <width>146</width>
           <height>760</height>
          </rect>
         </property>
@@ -79,12 +85,6 @@
           <spacer name="verticalSpacer">
            <property name="orientation">
             <enum>Qt::Orientation::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
            </property>
           </spacer>
          </item>
